<resources>
    <string name="app_name">融冰装置</string>
    <string name="devlist">融冰装置列表</string>
    <string name="linex1point">重大xx线1#</string>
    <string name="linex2point">重大xx线2#</string>
    <string name="A">A相</string>
    <string name="B">B相</string>
    <string name="C">C相</string>
    <string name="division">分裂</string>
    <string name="division1">分裂1</string>
    <string name="division2">分裂2</string>
    <string name="division3">分裂3</string>
    <string name="division4">分裂4</string>
    <string name="jibin">积冰器</string>
    <string name="division10">圆柱体</string>
    <string name="division11">圆柱体1</string>
    <string name="division12">圆柱体2</string>
    <string name="division13">圆柱体3</string>
    <string name="division14">圆柱体4</string>

    <string name="eleccurrent">电流</string>
    <string name="eleccurrent1">覆冰量</string>
    <string name="meltstatus">融冰开关</string>
    <string name="meltstatus1">柱体加热</string>
    <string name="linetemp">导线温度</string>
    <string name="totalcurrent">总电流</string>
    <string name="icethick">覆冰厚度</string>
    <string name="battery">电池电量</string>
    <string name="date">时间</string>
    <string name="envtemp">环境温度</string>
    <string name="envhumidity">环境湿度</string>
    <string name="envspeed">实时风速</string>
    <string name="envsun">光照度</string>
    <string name="history">历史数据</string>
    <string name="string_ice_thick">覆冰厚度</string>
    <string name="string_ice_thick_set">覆冰厚度阈值设定</string>
    <string name="string_ice_thick_set1">柱体旋转</string>
    <string name="string_cancel">取消</string>
    <string name="string_set">设定</string>
    <string name="detail">详情</string>
    <string name="string_user">用户名</string>
    <string name="string_user_password">密码</string>
    <string name="action_check_remeber_pwd">记住我</string>
    <string name="error_field_required">请输入有效信息</string>
    <string name="string_devlist">设备列表</string>
    <string name="error_login_failed">登录失败，请检查用户名和密码</string>
    <string name="login_success">登录成功</string>
    <string name="action_sign_in">登录</string>
    <string name="span_five_minute">最新</string>
    <string name="span_one_hour">每小时</string>
    <string name="span_daily">每天</string>
</resources>
