<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="54dp"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp">



    <TextView
        android:id="@+id/text_title"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp"
        android:text="@string/division"
        android:gravity="center"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_width="45dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        />
    <TextView
        android:id="@+id/text_elec_current"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp"
        android:text="@string/eleccurrent"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/text_title"
        android:layout_width="60dp"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        />

    <TextView
        android:id="@+id/text_history"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/text_elec_current"
        android:layout_width="60dp"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:text="@string/history"
        android:layout_marginLeft="15dp"
        />

    <TextView
        android:id="@+id/text_status"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp"
        android:text="@string/meltstatus"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        />
</RelativeLayout>
